iptables.save
# Generated by iptables-save v1.4.21 on Sat Nov 18 11:30:14 2017
*nat
:PREROUTING ACCEPT [921572:151302889]
:INPUT ACCEPT [725541:98568629]
:OUTPUT ACCEPT [2114221:227203776]
:POSTROUTING ACCEPT [838509:121324296]
-A PREROUTING -i eth0 -p tcp -m mark --mark 0x63 -m tcp --dport 80 -j DNAT --to-destination 192.168.188.2
-A PREROUTING -i eth0 -p tcp -m mark --mark 0x63 -m tcp --dport 443 -j DNAT --to-destination 192.168.188.2
-A PREROUTING -i eth0 -p tcp -m mark --mark 0x44 -m tcp -j DNAT --to-destination 192.168.188.2
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o zt0 -j MASQUERADE
-A POSTROUTING -o zt1 -j MASQUERADE
-A POSTROUTING -o zt2 -j MASQUERADE
COMMIT
# Completed on Sat Nov 18 11:30:14 2017
# Generated by iptables-save v1.4.21 on Sat Nov 18 11:30:14 2017
*filter
:INPUT ACCEPT [41953387:23261967515]
:FORWARD ACCEPT [22326669:2972624650]
:OUTPUT ACCEPT [39575476:22267681206]
-A FORWARD -i eth0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth0 -j ACCEPT
-A FORWARD -i zt2 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i zt1 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i zt0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat Nov 18 11:30:14 2017
# Generated by iptables-save v1.4.21 on Sat Nov 18 11:30:14 2017
*mangle
:PREROUTING ACCEPT [35826:41293083]
:INPUT ACCEPT [2313:489253]
:FORWARD ACCEPT [33444:40793273]
:OUTPUT ACCEPT [2337:339604]
:POSTROUTING ACCEPT [35798:41134887]
:internet - [0:0]
:web - [0:0]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j web
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j web
-A PREROUTING -i eth0 -p tcp -m tcp -j internet
-A internet -m iprange --dst-range 192.168.188.0-192.168.188.255 -j RETURN
# coming from this MACs can let you through
-A internet -m mac --mac-source 58:94:6B:17:41:7C -j RETURN
-A internet -j MARK --set-xmark 0x44/0xffffffff
-A web -m iprange --dst-range 192.168.188.0-192.168.188.255 -j RETURN
# coming from this MACs can let you through
-A web -m mac --mac-source 58:94:6B:17:41:7C -j RETURN
-A web -j MARK --set-xmark 0x63/0xffffffff
COMMIT
# Completed on Sat Nov 18 11:30:14 2017
